--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "update-foreign-keys": "node updateForeignKeys.js"
+    "update-foreign-keys": "node updateForeignKeys.js",
+    "vercel-build": "npm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/axios": "^0.9.36",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -24,10 +24,12 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.9.0",
     "razorpay": "^2.9.6",
-    "react-native-webview": "^13.13.4",
     "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
