--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node --no-deprecation server.js",
     "dev": "nodemon server.js",
     "update-foreign-keys": "node updateForeignKeys.js",
     "vercel-build": "npm install"
