--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node --dns-result-order=ipv4first --trace-warnings server.js",
     "dev": "nodemon server.js",
     "update-foreign-keys": "node updateForeignKeys.js",
     "vercel-build": "npm install"
